created navigationbar and banner content of header and styled them

--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
     <title>Document</title>
 </head>
 
-<body></body>
+<body>
+    <header class="main-header">
+        <nav class="nav">
+            <h1><a href="#" class="logo">Transit</a></h1>
+            <ul class="menu">
+                <li><a href="#" class="menu-item">Home</a></li>
+                <li><a href="#" class="menu-item">Generic</a></li>
+                <li><a href="#" class="menu-item">Elements</a></li>
+                <li><a href="#" class="menu-item btn-white">Sign Up</a></li>
+            </ul>
+            <i class="fa fa-bars hamburger-menu"></i>
+        </nav>
+        <section class="banner-content">
+            <h1>Hi. This is Transit.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button href="#" class="btn-blue">Lorem ipsum dolor</button>
+        </section>
+    </header>
+</body>
 
 </html>
