--- a/index.html
+++ b/index.html
@@ -28,6 +28,42 @@
             <button href="#" class="btn-blue">Lorem ipsum dolor</button>
         </section>
     </header>
+
+    <main>
+        <section class="services">
+            <div class="container">
+                <div class="services-header">
+                    <h1>Consectetur adipisicing</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, exercitationem.
+                    </p>
+                </div>
+                <div class="services-content">
+                    <div class="box">
+                        <i class="fa fa-cloud icon big color-blue rounded"></i>
+                        <h4>Lorem ipsum dolor</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nisi aliquam tenetur at assumenda quam!
+                        </p>
+                    </div>
+                    <div class="box">
+                        <i class="fa fa-desktop icon big color-green rounded"></i>
+                        <h4>Lorem ipsum dolor</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nisi aliquam tenetur at assumenda quam!
+                        </p>
+                    </div>
+                    <div class="box">
+                        <i class="fa fa-rocket icon big color-red rounded"></i>
+                        <h4>Lorem ipsum dolor</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nisi aliquam tenetur at assumenda quam!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
