created about header and about content and about footer then styled them

--- a/index.html
+++ b/index.html
@@ -63,6 +63,45 @@
                 </div>
             </div>
         </section>
+
+        <section class="about">
+            <div class="container">
+                <div class="about-header">
+                    <h2>Lorem ipsum dolor sit</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, porro
+                    </p>
+                </div>
+                <div class="about-content">
+                    <div class="profile">
+                        <img src="./src/img/profile_placeholder.gif" alt="profile" />
+                        <h4>Lorem ipsum</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                    <div class="profile">
+                        <img src="./src/img/profile_placeholder.gif" alt="profile" />
+                        <h4>Lorem ipsum</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                    <div class="profile">
+                        <img src="./src/img/profile_placeholder.gif" alt="profile" />
+                        <h4>Lorem ipsum</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                    <div class="profile">
+                        <img src="./src/img/profile_placeholder.gif" alt="profile" />
+                        <h4>Lorem ipsum</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                </div>
+                <div class="about-footer">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum obcaecati autem quis non neque harum tempora suscipit? Nihil necessitatibus quisquam neque enim nesciunt eveniet, quod corrupti repellat magni animi exercitationem.
+                    </p>
+                    <button class="btn-blue">Lorem ipsum dolor</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
