--- a/index.html
+++ b/index.html
@@ -102,6 +102,23 @@
                 </div>
             </div>
         </section>
+
+        <section class="contact">
+            <div class="contact-header">
+                <h2>Lorem ipsum dolor sit</h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.illum porro
+                </p>
+            </div>
+            <div class="contact-content">
+                <form>
+                    <input type="text" placeholder="Name" />
+                    <input type="text" placeholder="Email" />
+                    <textarea placeholder="Message" cols="30" rows="10"></textarea>
+                </form>
+                <button class="btn-dark">Send Message</button>
+            </div>
+        </section>
     </main>
 </body>
 
