created footer and styled it

--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
                 <button class="btn-dark">Send Message</button>
             </div>
         </section>
+
+        <footer class="footer">
+            <ul class="copyright">
+                <li>&copy; Untitled. All rights reserved</li>
+                <li>Design: <a href="https://templated.com">TEMPLATED</a></li>
+                <li>Images: <a href="https://unsplash.com">Unsplash</a></li>
+            </ul>
+        </footer>
     </main>
 </body>
 
